# podcastfy-content

./: .gitignore  main.py  pyproject.toml
inputs/splk-1002-pt1/: concepts  content
inputs/splk-1002-pt2/: concepts  content
inputs/splk-1002-pt3/: concepts  content
inputs/splk-1002-pt4/: concepts  content
inputs/splk-1002-pt5/: concepts  content
inputs/splk-1002-pt6/: concepts  content
notebooks/: test.ipynb
prompts/: extract-system-prompt  summarize  summarize-system-prompt  user-instructions
