[tool.poetry]
name = "podcastify-playing"
version = "0.1.0"
description = ""
authors = ["Konrad Zagozda <kzagozda@splunk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
