[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.0"
podcastfy = "^0.4.1"
ffmpeg = "^1.4"
ffmpeg-downloader = "^0.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
